card correct display on mobile

--- a/src/Components/Reviews/Card/Card.scss
+++ b/src/Components/Reviews/Card/Card.scss
@@ -18,7 +18,8 @@
 
 .card-header {
   display: flex;
-  padding-bottom: 8px;
+  padding-bottom: 16px;
+  width: 100%;
 }
 
 .card-header-text {
@@ -39,6 +40,9 @@
   padding-left: 16px;
   text-align: left;
   margin: 2px 4px;
+  @media (max-width: 600px) {
+    font-size: 14px;
+  }
 }
 
 
