--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -32,7 +32,8 @@
 @media only screen and (max-width: 600px) {
   .reviewCards {
     .slick-dots {
-      bottom: 100px;
+      bottom: 60px;
+      margin-bottom: 40px;
     }
   }
 }
